--- a/krita/ui/forms/wdgcolorspaceselector.ui
+++ b/krita/ui/forms/wdgcolorspaceselector.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>WdgColorSpaceSelector</class>
  <widget class="QWidget" name="WdgColorSpaceSelector">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>301</width>
+    <height>118</height>
+   </rect>
+  </property>
   <layout class="QFormLayout" name="formLayout">
    <property name="labelAlignment">
     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -120,6 +128,16 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="QLabel" name="lblColorantInfo">
+     <property name="text">
+      <string notr="true">TextLabel</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
