--- a/krita/ui/forms/wdgcolorspaceselector.ui
+++ b/krita/ui/forms/wdgcolorspaceselector.ui
@@ -139,6 +139,13 @@
      </property>
     </widget>
    </item>
+   <item row="4" column="1">
+    <widget class="QPushButton" name="bnAdvanced">
+     <property name="text">
+      <string>Choose Color Space</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
