--- a/krita/ui/forms/wdgcolorspaceselector.ui
+++ b/krita/ui/forms/wdgcolorspaceselector.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>301</width>
-    <height>118</height>
+    <width>318</width>
+    <height>128</height>
    </rect>
   </property>
   <layout class="QFormLayout" name="formLayout">
@@ -129,22 +129,29 @@
      </item>
     </layout>
    </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="lblColorantInfo">
-     <property name="text">
-      <string notr="true">TextLabel</string>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="bnAdvanced">
-     <property name="text">
-      <string>Choose Color Space</string>
-     </property>
-    </widget>
+   <item row="3" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="lblColorantInfo">
+       <property name="text">
+        <string notr="true">TextLabel</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="bnAdvanced">
+       <property name="text">
+        <string>Choose Color Space</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
