Color set dialog: make combo non-editable, since typing a random name serves no purpose there.
REVIEW: 125487

--- a/libs/widgets/KoEditColorSet.ui
+++ b/libs/widgets/KoEditColorSet.ui
@@ -13,7 +13,7 @@
    <item>
     <widget class="QComboBox" name="selector" >
      <property name="editable" >
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
     </widget>
    </item>
