--- a/filters/sheets/latex/export/latexexportwidget.ui
+++ b/filters/sheets/latex/export/latexexportwidget.ui
@@ -247,7 +247,7 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,1">
             <item>
-             <widget class="KListWidget" name="languagesList">
+             <widget class="QListWidget" name="languagesList">
               <property name="sortingEnabled">
                <bool>true</bool>
               </property>
@@ -272,7 +272,7 @@
              </layout>
             </item>
             <item>
-             <widget class="KListWidget" name="langUsedList">
+             <widget class="QListWidget" name="langUsedList">
               <property name="sortingEnabled">
                <bool>true</bool>
               </property>
@@ -388,11 +388,6 @@
    <class>KComboBox</class>
    <extends>QComboBox</extends>
    <header>kcombobox.h</header>
-  </customwidget>
-  <customwidget>
-   <class>KListWidget</class>
-   <extends>QListWidget</extends>
-   <header>klistwidget.h</header>
   </customwidget>
   <customwidget>
    <class>KUrlRequester</class>
