--- a/stage/part/ui/KPrHtmlExport.ui
+++ b/stage/part/ui/KPrHtmlExport.ui
@@ -80,7 +80,7 @@
     </widget>
    </item>
    <item row="6" column="0" colspan="3">
-    <widget class="KListWidget" name="kListBox_slides">
+    <widget class="QListWidget" name="kListBox_slides">
      <property name="locale">
       <locale language="English" country="UnitedStates"/>
      </property>
@@ -293,11 +293,6 @@
   </layout>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>KListWidget</class>
-   <extends>QListWidget</extends>
-   <header>klistwidget.h</header>
-  </customwidget>
   <customwidget>
    <class>KLineEdit</class>
    <extends>QLineEdit</extends>
