--- a/braindump/src/forms/wdgsectionproperties.ui
+++ b/braindump/src/forms/wdgsectionproperties.ui
@@ -19,7 +19,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="KComboBox" name="comboBoxLayout"/>
+       <widget class="QComboBox" name="comboBoxLayout"/>
    </item>
    <item row="1" column="1">
     <spacer name="verticalSpacer">
