Make the icon sizes not hardcoded - better for hiDpi

--- a/plugins/textshape/dialogs/SimpleAnnotationWidget.ui
+++ b/plugins/textshape/dialogs/SimpleAnnotationWidget.ui
@@ -19,6 +19,12 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QToolButton" name="insertAnnotation">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Insert Note</string>
      </property>
