--- a/plugins/textshape/dialogs/SimpleInsertWidget.ui
+++ b/plugins/textshape/dialogs/SimpleInsertWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>230</width>
-    <height>66</height>
+    <width>488</width>
+    <height>53</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,7 +23,16 @@
    <property name="sizeConstraint">
     <enum>QLayout::SetMinAndMaxSize</enum>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <property name="spacing">
@@ -35,43 +44,43 @@
       <number>2</number>
      </property>
      <item row="1" column="6">
-         <widget class="QToolButton" name="splitSections">
-             <property name="text">
-                 <string>...</string>
-             </property>
-             <property name="popupMode">
-                 <enum>QToolButton::InstantPopup</enum>
-             </property>
-             <property name="autoRaise">
-                 <bool>true</bool>
-             </property>
-         </widget>
+      <widget class="QToolButton" name="configureSection">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="popupMode">
+        <enum>QToolButton::InstantPopup</enum>
+       </property>
+       <property name="autoRaise">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="7">
+      <widget class="QToolButton" name="splitSections">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="popupMode">
+        <enum>QToolButton::InstantPopup</enum>
+       </property>
+       <property name="autoRaise">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
      <item row="1" column="5">
-         <widget class="QToolButton" name="configureSection">
-             <property name="text">
-                 <string>...</string>
-             </property>
-             <property name="popupMode">
-                 <enum>QToolButton::InstantPopup</enum>
-             </property>
-             <property name="autoRaise">
-                 <bool>true</bool>
-             </property>
-         </widget>
-     </item>
-     <item row="1" column="4">
-         <widget class="QToolButton" name="insertSection">
-             <property name="text">
-                 <string>...</string>
-             </property>
-             <property name="popupMode">
-                 <enum>QToolButton::InstantPopup</enum>
-             </property>
-             <property name="autoRaise">
-                 <bool>true</bool>
-             </property>
-         </widget>
+      <widget class="QToolButton" name="insertSection">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="popupMode">
+        <enum>QToolButton::InstantPopup</enum>
+       </property>
+       <property name="autoRaise">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0">
       <widget class="QuickTableButton" name="quickTable">
@@ -85,19 +94,6 @@
         <bool>true</bool>
        </property>
       </widget>
-     </item>
-     <item row="1" column="6">
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
      </item>
      <item row="1" column="1">
       <widget class="QToolButton" name="insertVariable">
@@ -122,7 +118,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="3">
+     <item row="1" column="4">
       <widget class="QToolButton" name="insertPageBreak">
        <property name="text">
         <string>...</string>
@@ -131,6 +127,19 @@
         <bool>true</bool>
        </property>
       </widget>
+     </item>
+     <item row="1" column="8">
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
