--- a/plugins/textshape/dialogs/SimpleParagraphWidget.ui
+++ b/plugins/textshape/dialogs/SimpleParagraphWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>358</width>
-    <height>163</height>
+    <width>492</width>
+    <height>120</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -20,7 +20,16 @@
    <property name="sizeConstraint">
     <enum>QLayout::SetMinAndMaxSize</enum>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <property name="spacing">
@@ -61,6 +70,12 @@
         </item>
         <item row="2" column="0" colspan="2">
          <widget class="FormattingButton" name="bulletListButton">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
@@ -71,6 +86,12 @@
         </item>
         <item row="2" column="3">
          <widget class="QToolButton" name="increaseIndent">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="autoRaise">
            <bool>true</bool>
           </property>
@@ -80,6 +101,12 @@
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
            <widget class="QToolButton" name="alignLeft">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="autoRaise">
              <bool>true</bool>
             </property>
@@ -87,6 +114,12 @@
           </item>
           <item>
            <widget class="QToolButton" name="alignCenter">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="autoRaise">
              <bool>true</bool>
             </property>
@@ -94,6 +127,12 @@
           </item>
           <item>
            <widget class="QToolButton" name="alignRight">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="autoRaise">
              <bool>true</bool>
             </property>
@@ -101,6 +140,12 @@
           </item>
           <item>
            <widget class="QToolButton" name="alignBlock">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>4</verstretch>
+             </sizepolicy>
+            </property>
             <property name="autoRaise">
              <bool>true</bool>
             </property>
@@ -123,6 +168,12 @@
         </item>
         <item row="2" column="4">
          <widget class="QToolButton" name="changeTextDirection">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="autoRaise">
            <bool>true</bool>
           </property>
@@ -130,6 +181,12 @@
         </item>
         <item row="2" column="2">
          <widget class="QToolButton" name="decreaseIndent">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="autoRaise">
            <bool>true</bool>
           </property>
@@ -137,6 +194,12 @@
         </item>
         <item row="2" column="9">
          <widget class="QToolButton" name="moreOptions">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
