--- a/filters/sheets/latex/export/latexexportwidget.ui
+++ b/filters/sheets/latex/export/latexexportwidget.ui
@@ -140,7 +140,7 @@
             </widget>
            </item>
            <item row="2" column="1">
-            <widget class="KIntNumInput" name="defaultFontSize">
+            <widget class="QSpinBox" name="defaultFontSize">
              <property name="value">
               <number>12</number>
              </property>
@@ -393,11 +393,6 @@
    <class>KUrlRequester</class>
    <extends>QFrame</extends>
    <header>kurlrequester.h</header>
-  </customwidget>
-  <customwidget>
-   <class>KIntNumInput</class>
-   <extends>QWidget</extends>
-   <header>knuminput.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
