DB connection widget: set minimum to 0 and maximum value for port number to 0xFFFF
(backport from kexi.git)

--- a/kexi/widget/kexidbconnectionwidget.ui
+++ b/kexi/widget/kexidbconnectionwidget.ui
@@ -394,6 +394,12 @@
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="KIntNumInput" name="customPortEdit" native="true">
+          <property name="minimum">
+           <number>0</number>
+          </property>
+          <property name="maximum">
+           <number>65535</number>
+          </property>
           <property name="minValue" stdset="0">
            <number>0</number>
           </property>
