--- a/plugins/pathshapes/spiral/SpiralShapeConfigWidget.ui
+++ b/plugins/pathshapes/spiral/SpiralShapeConfigWidget.ui
@@ -12,7 +12,7 @@
   <property name="windowTitle" >
    <string>Spiral Shape</string>
   </property>
-  <layout class="QGridLayout" >
+  <layout class="QFormLayout" >
    <item row="0" column="0" >
     <widget class="QLabel" name="label_3" >
      <property name="text" >
